# piwiplay

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SPEC-v2.md  SPEC.md
crates/dst/: Cargo.toml
crates/dst/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/examples/: dsd_dump.rs  play_once.rs
crates/engine/src/: config.rs  error.rs  lib.rs  pcm.rs  player.rs  playlist.rs  testgen.rs  types.rs  waveform.rs
crates/engine/src/audio/: mod.rs  pipewire_sink.rs  ring.rs
crates/engine/src/decode/: dff.rs  dsf.rs  mod.rs
crates/engine/tests/: dst_native.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  fs_browser.rs  lib.rs  main.rs  theme.rs  ui.rs  widgets.rs
crates/tui/tests/: render.rs
packaging/: config.example.toml
packaging/homebrew/: README.md  init-tap-repo.sh
packaging/homebrew/Formula/: piwiplay.rb
spike/: Cargo.toml  RESULTS.md
spike/src/: main.rs
