[workspace]
resolver = "2"
members = ["crates/engine", "crates/tui"]
exclude = ["spike"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vladekk"]
repository = "https://github.com/vladekk/piwiplay"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
