[package]
name = "piwiplay-engine"
description = "Headless playback engine for piwiplay: DSD decoding + native PipeWire DSD output, driven by a Command/Event API."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "piwiplay_engine"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
toml.workspace = true
directories.workspace = true
crossbeam-channel.workspace = true
pipewire = "0.9"
piwiplay-dst = { path = "../dst" }

[dev-dependencies]
tempfile = "3"
